@@ -15,10 +15,12 @@ alarm_kill (iCalObject *object)
 	/* The server never schedules alarms */
 }
 
+
 int
 main (int argc, char *argv [])
 {
 	printf ("It does not do anything yet\n");
 
+	backend_init ("/tmp");
 	return 0;
 }
